# libconfig

./: .cvsignore  AUTHORS  HEADER  INSTALL  LICENSE  Makefile.in  README  TODO  aclocal.m4  compat.h  conf_apache.c  conf_colon.c  conf_equal.c  conf_section.c  conf_space.c  conf_xml.c  config.h.in  configure  configure.ac  configure.in  getopt.h  lc_cleanup.3.in  lc_geterrno.3.in  lc_geterrstr.3.in  lc_handle_type.3.in  lc_process.3.in  lc_process_file.3.in  lc_register_callback.3.in  lc_register_var.3.in  lc_seterrstr.3.in  libconfig.3.in  libconfig.c  libconfig.h  libconfig.h.in  libconfig.spec  libconfig.syms.in  libconfig_private.h  makearch.info  strtoll.c  strtoll.h  (+5 more)
.fossil-settings/: ignore-glob
Docs/: USAGE
aclocal/: libconfig.m4  optarg.m4  shobj.m4
